<resources>
    <string translatable="false" name="google_maps_key">AIzaSyA1ePqBfxZdCu0ztk5CT8Jxi07nvanVCNo</string>
    <string name="app_name">Super Dating</string>
    <string name="detail_introduction_title">Első randis tervekről pár szóban</string>
    <string name="details_button_title">Részletek</string>
    <string name="details_screen_title">Első randi…</string>
    <string name="list_fragment_title">Közelben</string>
    <string name="age_format">%d éves</string>
    <string name="error_unknown">Ismeretlen hiba</string>
    <string name="no_internet_error">Nincs internet kapcsolat</string>
    <string name="retry_button_text">Újra</string>
    <string name="map_menu_name">Térkép</string>
    <string name="add_person_fragment_title">Mik a terveid?</string>
    <string name="person_age_hint">Kor</string>
    <string name="person_job_hint">Foglalkozás</string>
    <string name="person_inroduction_title">Mik a terveid az első randira?</string>
    <string name="person_introduction_hint">Írd le a randi részleteit</string>
    <string name="person_rating_hint">Értékeld egytől ötig</string>
    <string name="person_age_error">18 és 99 között kell lennie</string>
    <string name="person_job_error">Kötelező kitölteni</string>
    <string name="person_rating_error">1 és 5 között kell lennie</string>
    <string name="person_introduction_error">Legalább 50 karakter hosszúnak kell lennie</string>
    <string name="image_chooser_title">Válassz képet</string>
</resources>
