<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/person_add_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/add_image_button"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:background="@android:color/darker_gray"
                    android:src="@drawable/baseline_add_circle_outline_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/person_age_input_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/add_image_button">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/person_age_input"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/person_job_hint"
                        android:inputType="textCapSentences"
                        android:lines="1" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/person_job_input_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/person_age_input_container">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/person_job_input"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/person_age_hint"
                        android:inputType="numberDecimal"
                        android:lines="1" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/person_rating_input_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/person_job_input_container">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/person_rating_input"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/person_rating_hint"
                        android:inputType="numberDecimal"
                        android:lines="1" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/person_introduction_title"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="25dp"
                    android:text="@string/person_inroduction_title"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/person_rating_input_container"
                    app:layout_constraintVertical_bias="0.0" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/person_introduction_container"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginEnd="25dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="@integer/person_introduction_max_char_count"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/person_introduction_title">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/person_introduction_input"
                        style="@style/TextAppearance.AppCompat.Body1"
                        android:layout_width="match_parent"
                        android:layout_height="67dp"
                        android:hint="@string/person_introduction_hint"
                        android:singleLine="false" />

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/finish_add_person_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:src="@drawable/baseline_done_24"
        android:tint="@android:color/white"
        app:layout_anchorGravity="bottom|end"
        app:layout_anchor="@id/person_add_container" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>